test/correct/PatNegateInt.hs
module PatNegateInt where

main :: Int
main = case -3 of
    -3 -> 42
    _  -> -1
