test/typeerrors/Heuristics/AppNotABinFunction1.hs
module AppNotABinFunction1 where

plusEen :: Int -> Int
plusEen x = x + 1

main = 3 `plusEen` 5
